# recompylr

./: .gitignore  README.md  build_all.py  build_specification.toml  draw_graphs.py  execute_all.py  makefile  process.c  processThread.c  pyproject.toml  serial.c  thread.c
recompylr/: build_all.py  draw_graphs.py  execute_all.py  verify_toml.py
src/: process.c
