[project]
name = "ENCE360_assignment"
version = "1.0.0"
authors = [{ name = "Harry Parkes", email = "harrydparkes@proton.me" }]
readme = "README.md"
dependencies = ["toml", "matplotlib"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes
select = ["E4", "E7", "E9", "F", "PL", "UP", "N", "PL", "RUF"]
